# rust-ack

./: .env  .gitignore  Cargo.toml  Makefile
etc/db/: schema.sql
etc/test/: api_test.sh  load_test.sh  quick_test.sh  test_scripts_readme.md
logs/: app.log.2025-12-06  app.log.2025-12-11  app.log.2025-12-21  app.log.2026-01-02
password_hasher/: Cargo.toml
password_hasher/src/: main.rs
src/: main.rs
src/configs/: database.rs  logging.rs  mod.rs
src/controllers/: auth.rs  product.rs  user.rs
src/dao/: mod.rs  product_dao.rs  user_dao.rs
src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs
src/models/: auth.rs  mod.rs  product.rs  user.rs
src/routes/: auth.rs  docs.rs  middleware.rs  mod.rs  product.rs  user.rs
src/services/: auth_service.rs  mod.rs  product_service.rs  user_service.rs
