[package]
name = "rust-ack"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
jsonwebtoken = { version = "10.2" ,features = ["aws_lc_rs"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
rust_decimal = "1.38"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"